--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -18,8 +18,7 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
-    <Use64BitIISExpress>
-    </Use64BitIISExpress>
+    <Use64BitIISExpress>false</Use64BitIISExpress>
     <IISExpressSSLPort>44325</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -259,16 +258,6 @@
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-<<<<<<< HEAD
-    <Compile Include="Migrations\202311061358105_rebuild.cs" />
-    <Compile Include="Migrations\202311061358105_rebuild.designer.cs">
-      <DependentUpon>202311061358105_rebuild.cs</DependentUpon>
-=======
-    <Compile Include="Migrations\202311070604025_update.cs" />
-    <Compile Include="Migrations\202311070604025_update.designer.cs">
-      <DependentUpon>202311070604025_update.cs</DependentUpon>
->>>>>>> master
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -4426,14 +4415,6 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< HEAD
-    <EmbeddedResource Include="Migrations\202311061358105_rebuild.resx">
-      <DependentUpon>202311061358105_rebuild.cs</DependentUpon>
-=======
-    <EmbeddedResource Include="Migrations\202311070604025_update.resx">
-      <DependentUpon>202311070604025_update.cs</DependentUpon>
->>>>>>> master
-    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
