--- a/BanHang/BanHang.csproj
+++ b/BanHang/BanHang.csproj
@@ -266,6 +266,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202311260717375_updatesale.cs" />
+    <Compile Include="Migrations\202311260717375_updatesale.designer.cs">
+      <DependentUpon>202311260717375_updatesale.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\baseviewmodel.cs" />
@@ -4464,6 +4468,11 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Scripts\jquery-3.7.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.7.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202311260717375_updatesale.resx">
+      <DependentUpon>202311260717375_updatesale.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
