--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#IGNORE FILE BIN
+bin/
+
 # User-specific files
 *.rsuser
 *.suo
@@ -365,4 +368,3 @@ FodyWeavers.xsd
 /BanHang/Web.config
 /BanHang/Web.Debug.config
 /BanHang/Web.Release.config
-/BanHang/bin/
