--- a/BanHang/packages.config
+++ b/BanHang/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.AspNetCore.Cryptography.Internal" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="4.1.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Identity.Core" version="8.0.0" targetFramework="net472" />
